--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "axios": "^1.6.8",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.1.0",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "eslint": "^8",
